@@ -3,29 +3,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>stream-registry-parent</artifactId>
-        <groupId>com.homeaway.streamingplatform</groupId>
-        <version>0.4.1-SNAPSHOT</version>
+        <groupId>com.homeaway.streamplatform</groupId>
+        <version>0.4.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>stream-registry</artifactId>
     <name>${project.groupId}:${project.artifactId}</name>
 
+    <properties>
+        <dropwizard.server.config>stream-registry-config.yaml</dropwizard.server.config>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>com.homeaway.streamingplatform</groupId>
+                <groupId>com.homeaway.streamplatform</groupId>
                 <artifactId>stream-registry-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.homeaway.streamingplatform</groupId>
+                <groupId>com.homeaway.streamplatform</groupId>
                 <artifactId>schema-library-events</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.homeaway.streamingplatform</groupId>
-                <artifactId>kafka-infra-provider</artifactId>
+                <groupId>com.homeaway.streamplatform</groupId>
+                <artifactId>infra-provider-kafka</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
@@ -33,18 +37,73 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.homeaway.streamingplatform</groupId>
+            <groupId>com.homeaway.streamplatform</groupId>
             <artifactId>stream-registry-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.homeaway.streamingplatform</groupId>
+            <groupId>com.homeaway.streamplatform</groupId>
             <artifactId>schema-library-events</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.homeaway.streamingplatform</groupId>
-            <artifactId>kafka-infra-provider</artifactId>
+            <groupId>com.homeaway.streamplatform</groupId>
+            <artifactId>infra-provider-kafka</artifactId>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <configuration>
+                            <to>
+                                <image>homeaway/stream-registry</image>
+                                <tags>
+                                    <tag>${project.version}</tag>
+                                    <tag>latest</tag>
+                                </tags>
+                            </to>
+                            <container>
+                                <mainClass>${mainClass}</mainClass>
+                                <args>
+                                    <arg>server</arg>
+                                    <arg>${jib.container.appRoot}/${dropwizard.server.config}</arg>
+                                </args>
+                                <ports>
+                                    <port>8080</port>
+                                </ports>
+                                <!-- good defaults intended for containers -->
+                                <jvmFlags>
+                                    <jmxFlag>-server</jmxFlag>
+                                    <jmxFlag>-Djava.awt.headless=true</jmxFlag>
+                                    <jmxFlag>-XX:+UnlockExperimentalVMOptions</jmxFlag>
+                                    <jmxFlag>-XX:+UseCGroupMemoryLimitForHeap</jmxFlag>
+                                    <jmxFlag>-XX:InitialRAMFraction=2</jmxFlag>
+                                    <jmxFlag>-XX:MinRAMFraction=2</jmxFlag>
+                                    <jmxFlag>-XX:MaxRAMFraction=2</jmxFlag>
+                                    <jmxFlag>-XX:+UseG1GC</jmxFlag>
+                                    <jmxFlag>-XX:MaxGCPauseMillis=100</jmxFlag>
+                                    <jmxFlag>-XX:+UseStringDeduplication</jmxFlag>
+                                </jvmFlags>
+                            </container>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>dockerBuild</id>
+                                <goals>
+                                    <goal>dockerBuild</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
